refinment controller raw material,product,premix
